--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ build-backend = "hatchling.build"
 name = "pytik"
 version = "0.0.1"
 authors = [{name="NoGoodSuggestedNames"}]
-description = "RouterOS V7 API client"
+description = "RouterOS V7 RESTful API connector"
 readme = "README.md"
 requires-python = ">=3.7"
 classifiers = [
